add apollo odyssee in education section

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Hi! I'm Julia, I create & I code. Check my portfolio 👩‍💻">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="../src/images/favicon-32x32.png">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Google Font -->
