fix styling for button in Projects section in mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Julia Hanard">
     <meta property="og:title" content="Julia Hanard | Portfolio">
     <meta property="og:description" content="Hi! I'm Julia, I create & I code. Check my portfolio 👩‍💻">
-    <meta name="image" property="og:image" content="https://github.com/julianoiret/react-portfolio/blob/306a81dd85357b9ad89f9e237ab7cb4f66909cc0/src/images/og-img.png?raw=true"> // HERE
+    <meta name="image" property="og:image" content="https://github.com/julianoiret/react-portfolio/blob/306a81dd85357b9ad89f9e237ab7cb4f66909cc0/src/images/og-img.png?raw=true"> 
     <meta property="og:url" content="https://julia-hanard-portfolio.netlify.app/">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Favicon -->
